# tinfoil

./: Cargo.toml  README.md
tinfoil/: Cargo.toml
tinfoil-macros/: Cargo.toml
tinfoil-macros/src/: implementation.rs  lib.rs
tinfoil-tests/: Cargo.toml
tinfoil-tests/src/: lib.rs
tinfoil/src/: internals.rs  lib.rs
