[package]
name = "tinfoil-tests"
version = "0.0.1"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinfoil = { path = "../tinfoil" }
tinfoil-macros = { path = "../tinfoil-macros" }